--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
   <section class="hero">
     <h2>Kesehatan Anda, Dalam Genggaman</h2>
-    <p>Monitoring SpO₂ & Detak Jantung Real-time dengan Teknologi IoT</p>
+    <p>Monitoring SpO₂, Detak Jantung, dan Kadar Gula Darah Real-time dengan Teknologi IoT</p>
     <a href="#produk" class="cta">Lihat Produk</a>
   </section>
 
   <section id="tentang">
     <h2>Tentang AiroHearth</h2>
     <p style="text-align: center; max-width: 800px; margin: 0 auto 40px; font-size: 18px;">
-      AiroHearth adalah perangkat kesehatan pintar untuk memantau SpO₂ dan detak jantung secara real-time melalui koneksi website. 
+      AiroHearth adalah perangkat kesehatan pintar untuk memantau SpO₂ detak jantung, dan kadar gula darah secara real-time melalui koneksi website. 
       Didesain portabel, terjangkau, dan akurat, cocok digunakan oleh atlet, pendaki, atau siapa saja yang peduli dengan kesehatannya.
     </p>
     <div class="features">
